fixed-background color,central align,table

--- a/website/work2/style.css
+++ b/website/work2/style.css
@@ -1,3 +1,7 @@
+body{
+  background-color: yellowgreen; 
+  text-align: center;
+}
 .para1 {
   background-color: aqua;
 }
